--- a/2024-08-30-quipu.md
+++ b/2024-08-30-quipu.md
@@ -2,8 +2,8 @@
 date: 2024-08-30
 layout: post
 title: Quipu (nudo, en quechua) 
-subtitle: 
-description: El artefacto del Estado Inka para guardar y comunicar datos.
+subtitle: El artefacto del Estado Inka para guardar y comunicar datos.
+description: 
 image: https://felipevillota.com/wp-content/uploads/2024/08/q_1.jpg
 optimized_image: 
 category: miscellaneous
