--- a/2024-10-01-help.md
+++ b/2024-10-01-help.md
@@ -7,8 +7,9 @@ Modelos con doble capa de optimización.
 description: 
 image: https://felipevillota.com/wp-content/uploads/2024/10/Captura-de-pantalla-561.png
 optimized_image: 
-category: project
-tags:
+taxonomy:
+  category: 
+  - project
   - AI
   - unsupervised
   - dimension-reduction
