--- a/2024-08-30-quipu.md
+++ b/2024-08-30-quipu.md
@@ -6,12 +6,13 @@ subtitle: El artefacto del Estado Inka para guardar y comunicar datos.
 description: 
 image: https://felipevillota.com/wp-content/uploads/2024/08/q_1.jpg
 optimized_image: 
-category: miscellaneous
-tags:
+taxonomy:
+  category: 
+  - miscellaneous
   - one-pager
   - Inka
   - database
-  - enespañol 
+  - en-español 
  
 author: Felipe Villota 
 ---
