--- a/2024-08-30-quipu.md
+++ b/2024-08-30-quipu.md
@@ -24,9 +24,18 @@ author: Felipe Villota
   <figcaption class="caption">Los primeros quipus a los que les presté antención (o recuerdo haberlo hecho). Fotos propias. Chile, 2024.</figcaption>
 </figure>
 
-Fue en el Museo de Arte Precolombino de Santiago de Chile a finales de mayo de 2024. Ni siquiera fue cuando estuve en Perú unos años atrás, en un recorrido por lugares espectaculares en Lima, Cuzco, Machu Picchu y Puno – hasta dormir en los Uros y dar una vuelta por Taquile en el Titicaca. No le presté atención entonces. Pero allí en Santiago, como analista de datos sociales, el objeto me conmovió. El quipu expuesto era una soga delgada casi en espiral del cual se desprendían otros hilos como rayos, unos más largos que otros, que a su vez estaban llenos de texturas – de lisura interrumpida a menudo por nudos diferentes. En principio, todo de color blanco avejentado. Parecía más bien el esqueleto de algún animal marino raro o de un coral. De ese tipo de cuerpos que habitan en los cabinets de curiosités de personajes como Albertus Seba.
-Me enteré enseguida por la descripción de la exposición que se trataba de un método de registro de cálculos del Estado Inka. Después supe que las operaciones previas, supuestamente se hacían con una técnica de conteo similar al ábaco llamada yupana [1] [2]. También me di cuenta que los quipus no solo albergarían información estadística cuantitativa sino también ‘[…] proezas y hazañas, genealogías, poemas y canciones’ [3]. La información del que vi en el museo chileno se dice que era – probablemente – relativa a censos y tributos en inmediaciones de Arica, al norte del actual Chile, pero lejano sur del imperio Inka [4]. Básicamente, estaba enfrente a una base de datos – de tradición precolombina – que guarda y comunica información a través de una sofisticada relación de número de cuerdas, sectores, conjuntos y niveles de información. Ah, y patrones de colores. Hasta el día de hoy, no se sabe qué significan realmente [5]. Según el museo, ese quipu – hecho con fibra de camélido hace aproximadamente 450 años – tiene alrededor de 600 cuerdas y alberga más de 15,000 puntos de datos [4]. Después vi otros quipus más pequeños con hilos de colores más aparentes y de formas “jóvenes”, pero como queriendo “crecer” como el primero que vi.
-Lo primario, siendo un gran desconocedor de este tema, es que me impactó la sensación de que se necesita tocar para interpretar esos registros. Pasar las manos sobre las cuerdas y sentir los relatos, los turupes, como si fuera un rosario. Una y otra vez. Esto viene dado por la notación tridimensional de los datos hecha por los especialistas inkaicos llamados quipucamayocs [2] [6]. Al registrar datos a través señales visibles y palpables – combinaciones de colores, nudos, espacios, lisuras – hay un puente entre el dato y el cuerpo. Donde se confunde lo que a simple vista se puede contar, se continuaría con el tacto. Me preguntaba si ¿acaso una invidente inkaica podría interpretar algo así? ¿podría saber lo que esos nudos representaban: personas, animales, cosas, eventos, un mapa? 
+Fue en el Museo de Arte Precolombino de Santiago de Chile a finales de mayo de 2024. Ni siquiera fue cuando estuve en Perú unos años atrás, en un recorrido por lugares espectaculares en Lima, Cuzco, Machu Picchu y Puno – hasta dormir en los Uros y dar una vuelta por Taquile en el Titicaca. No le presté atención entonces. Pero allí en Santiago, el objeto me conmovió. 
+
+El quipu expuesto era una soga delgada casi en espiral del cual se desprendían otros hilos como rayos, unos más largos que otros, que a su vez estaban llenos de texturas – de lisura interrumpida a menudo por nudos diferentes. En principio, todo de color blanco avejentado. Parecía más bien el esqueleto de algún animal marino raro o de un coral. De ese tipo de cuerpos que habitan en los cabinets de curiosités de personajes como Albertus Seba. 
+
+Me enteré enseguida por la descripción de la exposición que se trataba de un método de registro de cálculos del Estado Inka. Después supe que las operaciones previas, supuestamente se hacían con una técnica de conteo similar al ábaco llamada yupana [1] [2]. También me di cuenta que los quipus no solo albergarían información estadística cuantitativa sino también ‘[…] proezas y hazañas, genealogías, poemas y canciones’ [3]. La información del que vi en el museo chileno se dice que era – probablemente – relativa a censos y tributos en inmediaciones de Arica, al norte del actual Chile, pero lejano sur del imperio Inka [4].
+
+Básicamente, estaba enfrente a una base de datos – de tradición precolombina – que guarda y comunica información a través de una sofisticada relación de número de cuerdas, sectores, conjuntos y niveles de información. Ah, y patrones de colores. Hasta el día de hoy, no se sabe qué significan realmente [5]. Según el museo, ese quipu – hecho con fibra de camélido hace aproximadamente 450 años – tiene alrededor de 600 cuerdas y alberga más de 15,000 puntos de datos [4]. Después vi otros quipus más pequeños con hilos de colores más aparentes y de formas “jóvenes”, pero como queriendo “crecer” como el primero que vi.
+
+Lo primario, siendo un gran desconocedor de este tema, es que me impactó la sensación de que se necesita tocar para interpretar esos registros. Pasar las manos sobre las cuerdas y sentir los relatos, los turupes, como si fuera un rosario. Una y otra vez. Esto viene dado por la notación tridimensional de los datos hecha por los especialistas inkaicos llamados quipucamayocs [2] [6].
+
+Al registrar datos a través señales visibles y palpables – combinaciones de colores, nudos, espacios, lisuras – hay un puente entre el dato y el cuerpo. Donde se confunde lo que a simple vista se puede contar, se continuaría con el tacto. Me preguntaba si ¿acaso una invidente inkaica podría interpretar algo así? ¿podría saber lo que esos nudos representaban: personas, animales, cosas, eventos, un mapa?
+
 El quipu, es un testamento de maestría artesana y de cuidado para organizar la información. Admiro su capacidad de belleza e imagino su facilidad para ser transportada por el territorio. Da la impresión de ser algo que se puede llevar puesto. También veo su fragilidad. Al menos se me ocurre que el fuego o un filo pueden echarlo a perder fácilmente y preocupa su reproducibilidad. Los personajes que hacían esto literalmente entrelazaban los pulsos y daban coherencia al imperio andino. 
 
 Referencias: 
