--- a/2024-08-30-quipu.md
+++ b/2024-08-30-quipu.md
@@ -4,7 +4,7 @@ layout: post
 title: Quipu (nudo, en quechua) 
 subtitle: El artefacto del Estado Inka para guardar y comunicar datos.
 description: 
-image: https://felipevillota.com/wp-content/uploads/2024/08/q_1.jpg
+image: _images/q_1.jpg
 optimized_image: 
 taxonomy:
   category: 
