--- a/2024-08-30-quipu.md
+++ b/2024-08-30-quipu.md
@@ -4,8 +4,7 @@ layout: post
 title: Quipu (nudo, en quechua) 
 subtitle: El artefacto del Estado Inka para guardar y comunicar datos.
 description: 
-image: _images/q_11.jpeg
-optimized_image: 
+featured_image: _images/q_11.jpeg
 taxonomy:
   category: 
   - miscellaneous
