--- a/2024-10-01-help.md
+++ b/2024-10-01-help.md
@@ -5,7 +5,7 @@ title: HELP
 subtitle: Agrupamiento de países para su priorización en el envío de ayuda humanitaria mediante métodos de aprendizaje automático no supervisado. Reducción de dimensionalidad (PCA, t-SNE) + clustering (K-means, DBSCAN, AHC, Spectral, Gaussian Mixture). 
 Modelos con doble capa de optimización.
 description: 
-image: https://felipevillota.com/wp-content/uploads/2024/10/Captura-de-pantalla-561.png
+featured_image:
 optimized_image: 
 taxonomy:
   category: 
