--- a/2023-02-20-sna.md
+++ b/2023-02-20-sna.md
@@ -8,6 +8,8 @@ featured_image: _images/sna.png
 taxonomy:
     category: 
     - lab
+    - social network analysis
     
 author: Felipe Villota 
 ---
+<iframe src="https://docs.google.com/viewer?url=https://felipevillota.com/wp-content/uploads/2024/04/LAB4_sem_test_scores.pdf&embedded=true" width="100%" height="600px"></iframe>
