--- a/2023-02-20-sna.md
+++ b/2023-02-20-sna.md
@@ -9,23 +9,8 @@ taxonomy:
     category: 
     - lab
     - social network analysis
+    - network viz
     
 author: Felipe Villota 
 ---
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document Viewer</title>
-</head>
-<body>
-    <h1>View Document</h1>
-    <iframe 
-        src="https://docs.google.com/viewer?url=https://felipevillota.com/wp-content/uploads/2024/11/sna_reexam.pdf&embedded=true" 
-        width="100%" 
-        height="600px" 
-        style="border: none;">
-    </iframe>
-</body>
-</html>
+<iframe src="https://docs.google.com/viewer?url=https://felipevillota.com/wp-content/uploads/2024/11/sna_reexam.pdf&embedded=true" width="100%" height="600px" style="border: none;"> </iframe>
