--- a/2023-02-20-sna.md
+++ b/2023-02-20-sna.md
@@ -13,4 +13,8 @@ taxonomy:
     
 author: Felipe Villota 
 ---
-<iframe src="https://docs.google.com/viewer?url=https://felipevillota.com/wp-content/uploads/2024/11/sna_reexam.pdf&embedded=true" width="100%" height="600px" style="border: none;"> </iframe>
+<embed 
+    src="https://felipevillota.com/wp-content/uploads/2024/11/sna_reexam.pdf" 
+    width="100%" 
+    height="600px" 
+    type="application/pdf">
