--- a/2023-02-20-sna.md
+++ b/2023-02-20-sna.md
@@ -13,3 +13,4 @@ taxonomy:
     
 author: Felipe Villota 
 ---
+[click here to view it](https://felipevillota.com/wp-content/uploads/2024/11/sna_reexam.pdf)
