--- a/2023-02-20-sna.md
+++ b/2023-02-20-sna.md
@@ -14,4 +14,12 @@ taxonomy:
     
 author: Felipe Villota 
 ---
-[click here to view it](https://felipevillota.com/wp-content/uploads/2024/11/sna_reexam.pdf)
+
+<center>
+<iframe 
+    src="https://docs.google.com/viewer?url=felipevillota.com/wp-content/uploads/2024/11/sna_reexam.pdf&embedded=true" 
+    width="100%" 
+    height="600px" 
+    style="border: none;">
+</iframe>
+</center>
