--- a/2024-10-01-help.md
+++ b/2024-10-01-help.md
@@ -11,9 +11,14 @@ taxonomy:
   category: 
   - project
   - AI
-  - unsupervised
-  - dimension-reduction
-  - clustering 
+  - unsupervised machine learning
+  - dimension reduction
+  - clustering
+  - principal component analysis
+  - in-depth EDA 
  
 author: Felipe Villota 
 ---
+You can access the interactive Colab notebook here:
+
+[View Colab Notebook](https://colab.research.google.com/drive/1JssOq-cpvAY7fJFhXAKxy1mK_IX7Q5_e)
