--- a/2023-02-20-sna.md
+++ b/2023-02-20-sna.md
@@ -4,7 +4,7 @@ layout: post
 title: Social network analysis
 subtitle: 
 description: 
-featured_image: _images/sna.png  
+featured_image: _images/sna1.png  
 taxonomy:
     category: 
     - lab
