--- a/2024-12-13-pit.md
+++ b/2024-12-13-pit.md
@@ -1,8 +1,8 @@
 ---
 date: 2024-10-01
 layout: post
-title: PIT
-subtitle: Un terreno fértil de innovación social
+title: PIT. Un terreno fértil de innovación social
+subtitle: 
 featured_image: _images/carto_final.png
 taxonomy:
   category: 
